[package]
name = "jumpingsumo-rs"
version = "0.0.1"
authors = ["o0Ignition0o <jeremy.lempereur@gmail.com>"]
edition = "2018"
description = "parrot jumping sumo in rust"
license = "MIT/Apache-2.0"
keywords = ["drone", "parrot", "jumping", "sumo"]

[dependencies]
anyhow = "1.0"
arsdk-rs = { git = "https://github.com/elpiel/arsdk-rs", branch = "api" }
